--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </section>
       <section>
         <div class="container">
-          <h1 class="mb-4">Prodotti Consigliati!</h1>
+          <div class="d-flex justify-content-between mb-4"><h1>Prodotti Consigliati!</h1><button type="button" id="add" class="btn btn-primary">Aggiungi Pordotto</button></div>
           <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4">
             <!-- <div class="col">
               <div class="card h-100 shadow">
