--- a/backoffice.html
+++ b/backoffice.html
@@ -63,8 +63,45 @@
                 </li>
               </ul>
               <div class="d-sm-flex justify-content-end">
-                <button type="button" id="deleteButton" class="btn btn-danger m-2 px-5">Delete!</button>
-                <button type="button" id="resetButton" class="btn btn-warning m-2 px-5">Reset</button>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-danger m-2 px-5" data-bs-toggle="modal" data-bs-target="#exampleModal">Delete!</button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">AVVISO!</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">Vuoi Davvero Eliminare il Prodotto!??</div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
+                        <button type="button" id="deleteButton" class="btn btn-danger m-2 px-5" data-bs-dismiss="modal">Delete!</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Button trigger modal  reset del from-->
+                <button type="button" class="btn btn-warning m-2 px-5" data-bs-toggle="modal" data-bs-target="#exampleModal2">Reset</button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModal2Label" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModal2Label">AVVISO!</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">Vuoi Davvero Resettare il Form!??</div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
+                        <button type="button" id="resetButton" class="btn btn-warning m-2 px-5" data-bs-dismiss="modal">Reset</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- button salva form -->
                 <button type="submit" class="btn btn-primary m-2 px-5">Save</button>
               </div>
             </div>
