--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
       <section>
         <div class="container">
           <div class="d-flex justify-content-between mb-4"><h1>Prodotti Consigliati!</h1><button type="button" id="add" class="btn btn-primary">Aggiungi Pordotto</button></div>
+          <div id="spinner" class="spinner-border text-primary" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
           <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4">
             <!-- <div class="col">
               <div class="card h-100 shadow">
